bk_ida/gccida/g1/recog_19
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24534:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24547:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24551:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v35; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24552:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v36.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24559:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v38; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24563:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v39 + 8), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24565:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v39 + 16), recog_data_0.operand[2]) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24611:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24622:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v41; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24626:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v42; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24641:52: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( PLUS, HImode, recog_data_0.operand) == 0); 
                                                   ^~~~~~~~~~~~
                                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24645:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v94 = ix86_binary_operator_ok( PLUS, HImode, recog_data_0.operand); 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24658:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v46; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24662:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v47; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24671:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( MINUS, HImode, recog_data_0.operand) == 0); 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24678:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v62; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24686:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return ix86_unary_operator_ok( NEG, HImode, recog_data_0.operand) == 0 ? -1 : 0x15F; 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24692:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v50; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/insn-recog.c:24696:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v51; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_19/src/obj/insn-recog.o] Error 1
